# test-pdoc

./: pyproject.toml
.github/: deploy_docs.yaml
.github/workflows/: deploy_docs.yaml
src/: __init__.py  hello_world.py  simple_calculation.py
