[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pdoc-test"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    'numpy', 'pdoc'
]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["."]
